--- a/css/style.scss
+++ b/css/style.scss
@@ -6,4 +6,7 @@
 @import 'base';
 @import 'states';
 @import 'patterns';
-@import 'modules/splash';
+@import 'layouts/layouts-timeline';
+@import 'layouts/layouts-typography';
+@import 'modules/timeline';
+@import 'modules/typography';
