--- a/css/_base.scss
+++ b/css/_base.scss
@@ -11,7 +11,6 @@
 
 html{
     font:#{($base-font-size/16px)*1em}/#{$line-height-ratio} $base-font-family;
-    font-weight: $base-font-light;
     overflow-y:scroll;
     height:100%;
     color: $base;
@@ -47,7 +46,7 @@ pre,textarea,input,
 
 a {
     text-decoration: none;
-    color: $base;
+    color: inherit;
 }
 
 figcaption {
