pushes to hero version 1

--- a/css/_base.scss
+++ b/css/_base.scss
@@ -16,6 +16,8 @@ html{
     color: $base;
     background-color: $white;
     -webkit-font-smoothing: antialiased;
+    font-family: $futura;
+    font-weight: $base-weight-light;
 }
 
 body {
