--- a/css/layouts/_layouts-typography.scss
+++ b/css/layouts/_layouts-typography.scss
@@ -9,7 +9,7 @@
 .typography__sub-header {
 	@include span-columns(12);
 
-	@include media(min-width $tablet-min, 12) {
+	@include media(min-width $bp-med, 12) {
 		@include span-columns(8);
 	}
 }
@@ -17,7 +17,7 @@
 .typography__copy {
 	@include span-columns(12);
 
-	@include media(min-width $tablet-min, 12) {
+	@include media(min-width $bp-med, 12) {
 		@include span-columns(8);
 	}
 }
@@ -25,7 +25,7 @@
 .typography__caps {
 	@include span-columns(12);
 	
-	@include media(min-width $tablet-min, 12) {
+	@include media(min-width $bp-med, 12) {
 		@include span-columns(8);
 	}
 }
