--- a/css/modules/_timeline.scss
+++ b/css/modules/_timeline.scss
@@ -43,7 +43,7 @@
 	dd {
 		@extend %hard-reset;
 		margin-bottom: $half-spacing-unit;
-		color: $white;
+		color: $teal;
 		font-weight: bold;
 
 		a:hover {
