--- a/css/style.scss
+++ b/css/style.scss
@@ -8,5 +8,15 @@
 @import 'patterns';
 @import 'layouts/layouts-timeline';
 @import 'layouts/layouts-typography';
+@import 'layouts/layouts-masthead';
+@import 'layouts/layouts-hero';
+@import 'layouts/layouts-interest';
+@import 'layouts/layouts-trust';
+@import 'layouts/layouts-value';
 @import 'modules/timeline';
 @import 'modules/typography';
+@import 'modules/masthead';
+@import 'modules/hero';
+@import 'modules/interest';
+@import 'modules/trust';
+@import 'modules/value';
