--- a/css/_patterns.scss
+++ b/css/_patterns.scss
@@ -3,3 +3,29 @@
     padding: 0;
     list-style-type: none;
 }
+
+%side-padding {
+	padding: 0 $half-spacing-unit;
+
+	@include media(min-width $bp-med max-width $bp-large, 12) {
+		padding: 0 $half-spacing-unit;
+	}
+
+	@include media(min-width $bp-large, 12) {
+		padding: 0;
+	}
+}
+
+%button-padding {
+    padding: 0.5em 2em 0.62em 2em;
+}
+
+%button {
+    @extend %button-padding;
+    @include font-size($epsilon);
+    border: none;
+    display: inline-block;
+    position: relative;
+    outline: 0;
+    vertical-align: middle;
+}
