--- a/css/modules/_hero.scss
+++ b/css/modules/_hero.scss
@@ -13,10 +13,9 @@
 }
 
 .prompt__tagline {
-	font-size: $alpha;
-	line-height: 1.4;
+	font-size: 3rem;
+	line-height: 1.1;
 	padding-top: $triple-spacing-unit;
-
 }
 
 .prompt__copy {
