--- a/css/modules/_trust.scss
+++ b/css/modules/_trust.scss
@@ -1,25 +1,48 @@
 .trust {
 	@extend %side-padding;
+	padding-bottom: $ss-small;
 }
 
 .trust__figure {
-	padding-top: 12.5rem; //200%16;
+	padding-top: $ss-med;
 	margin-bottom: 0;
-}
 
-.trust__tagline {
-	text-align: center;
-
-	&::before {
+	&::after {
 		content: '';
 		display: block;
 		height: 4px;
-		background: $elephant-tusk;
-		width: 100%;
+		background: $yellow;
+		width: 120%;
+		margin-left: -10%;
 		margin-bottom: $base-spacing-unit;
 	}
 }
 
-.trust__sub-heading {
+.trust__tagline {
 	text-align: center;
+	margin-bottom: 0;
 }
+
+.trust__sub-heading {
+	@extend %base-weight-light;
+	text-align: center;
+	font-size: $delta;
+	margin-bottom: 0;
+}
+
+.trust__button {
+	@extend %button;
+	@include vp(box-shadow, inset 0 0 0 2px rgba(0,0,0,0.2));
+	background: $blue;
+	color: $white;
+	font-weight: $base-weight-heavy;
+	margin-top: $base-spacing-unit;
+	margin-bottom: $double-spacing-unit;
+	text-align: center;
+
+	&:hover {
+		cursor: pointer;
+		background: darken($blue, 4%);
+	}
+}
+
