--- a/css/modules/_interest.scss
+++ b/css/modules/_interest.scss
@@ -4,18 +4,19 @@
 
 	&::after {
 		content: '';
-		position: absolute;
 		left: 0;
-		background: $elephant-tusk;
-		height: 1px;
+		background: transparent;
+		height: 0px;
 		width: 100%;
+		border-bottom: 2px dotted $elephant-tusk;
 		display: block;
-		margin-top: $double-spacing-unit;
+		margin-top: $triple-spacing-unit;
 	}
 }
 
 .interest__tagline {
-	font-size: $delta;
+	font-size: $gamma;
+	font-weight: $base-weight-light;
 	line-height: 1.4;
 	text-align: center;
 	margin-bottom: 0;
@@ -46,8 +47,8 @@
 
 .interest__form-field-text {
 	@extend %button-padding;
-	@include vp(box-shadow, inset 0 0 0 2px $elephant-tusk);
-	@include font-size($epsilon);
+	@include vp(box-shadow, inset 0 0 0 2px $sea-grey);
+	font-size: $epsilon;
 	padding-left: $half-spacing-unit;
 	border: none;
 	font-family: $futura;
