legacy class removal

--- a/includes/_signature.html
+++ b/includes/_signature.html
@@ -1,4 +1,4 @@
-<svg class="masthead" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	 width="80px" height="24.022px" viewBox="280.4 275.336 80 24.022" enable-background="new 280.4 275.336 80 24.022"
 	 xml:space="preserve">
 <g>
