--- a/css/style.scss
+++ b/css/style.scss
@@ -13,6 +13,7 @@
 @import 'layouts/layouts-interest';
 @import 'layouts/layouts-trust';
 @import 'layouts/layouts-value';
+@import 'layouts/layouts-feature';
 @import 'modules/timeline';
 @import 'modules/typography';
 @import 'modules/masthead';
@@ -20,3 +21,4 @@
 @import 'modules/interest';
 @import 'modules/trust';
 @import 'modules/value';
+@import 'modules/feature';
