doubling up on san-serifs

--- a/css/_base.scss
+++ b/css/_base.scss
@@ -16,7 +16,7 @@ html{
     color: $base;
     background-color: $white;
     -webkit-font-smoothing: antialiased;
-    font-family: $futura;
+    font-family: $proxima;
     font-weight: $base-weight-light;
     line-height: 1.4;
 }
