--- a/css/modules/_trust.scss
+++ b/css/modules/_trust.scss
@@ -25,6 +25,7 @@
 
 .trust__sub-heading {
 	@extend %base-weight-light;
+	font-family: $proxima;
 	text-align: center;
 	font-size: $delta;
 	margin-bottom: 0;
