--- a/css/modules/_feature.scss
+++ b/css/modules/_feature.scss
@@ -1,3 +1,7 @@
+.features {
+
+}
+
 .feature-glance {
 	padding-top: $ss-small;
 }
@@ -5,6 +9,7 @@
 .feature__tagline {
 	font-size: $gamma;
 	font-weight: $base-weight-light;
+	font-family: $proxima;
 	line-height: 1.4;
 	text-align: center;
 	margin-bottom: $base-spacing-unit;
