--- a/css/style.scss
+++ b/css/style.scss
@@ -14,6 +14,7 @@
 @import 'layouts/layouts-trust';
 @import 'layouts/layouts-value';
 @import 'layouts/layouts-feature';
+@import 'layouts/layouts-footer';
 @import 'modules/timeline';
 @import 'modules/typography';
 @import 'modules/masthead';
@@ -22,3 +23,4 @@
 @import 'modules/trust';
 @import 'modules/value';
 @import 'modules/feature';
+@import 'modules/footer';
