--- a/css/modules/_interest.scss
+++ b/css/modules/_interest.scss
@@ -1,6 +1,11 @@
 .interest {
 	@extend %side-padding;
 	margin-top: $base-spacing-unit;
+	margin-bottom: $base-spacing-unit;
+
+	@include media(min-width $bp-med, 12) {
+		margin-bottom: 0;
+	}
 
 	&::after {
 		content: '';
@@ -21,16 +26,6 @@
 	line-height: 1.4;
 	text-align: center;
 	margin-bottom: 0;
-
-	&::before {
-		content: '';
-		display: block;
-		margin: 0 auto;
-		text-align: center;
-		background: url('../../assets/help.svg') center center no-repeat;
-		height: 90px;
-		width: 90px;
-	}
 }
 
 .interest__form-field-label,
@@ -63,13 +58,12 @@
 .interest__form-button {
 	@extend %button;
 	@include vp(box-shadow, inset 0 0 0 2px rgba(0,0,0,0.2));
-	font-family: $futura; 
-	background: $blue;
-	color: $white;
+	background: $yellow;
 	font-weight: $base-weight-heavy;
+	width: 100%;
 
 	&:hover {
 		cursor: pointer;
-		background: darken($blue, 4%);
+		background: darken($yellow, 4%);
 	}
 }
