--- a/css/modules/_value.scss
+++ b/css/modules/_value.scss
@@ -6,8 +6,8 @@
 	&::before {
 		content: '';
 		display: block;
-		margin: 0 auto;
 		text-align: center;
+		margin: $base-spacing-unit auto 0;
 		background: url('../../assets/coop.svg') center center no-repeat;
 		height: 90px;
 		width: 90px;
@@ -18,8 +18,8 @@
 	&::before {
 		content: '';
 		display: block;
-		margin: 0 auto;
 		text-align: center;
+		margin: $base-spacing-unit auto 0;
 		background: url('../../assets/time.svg') center center no-repeat;
 		height: 90px;
 		width: 90px;
@@ -30,8 +30,8 @@
 	&::before {
 		content: '';
 		display: block;
-		margin: 0 auto;
 		text-align: center;
+		margin: $base-spacing-unit auto 0;
 		background: url('../../assets/wholesale.svg') center center no-repeat;
 		height: 90px;
 		width: 90px;
@@ -42,23 +42,44 @@
 	margin-bottom: 0;
 	padding-top: $base-spacing-unit;
 	line-height: 1;
+	font-size: $delta;
 
 	&::after {
 		content: '';
 		display: block;
-		margin: 0 auto;
 		height: 4px;
-		width: 6rem;
-		background: $teal;
+		width: 4rem;
+		margin: 0 auto;
+		background: $elephant-tusk;
 		margin-top: $half-spacing-unit; 
 	}
 }
 
 .value__offering {
-	padding: $ss-small $half-spacing-unit 0;
+	margin-top: $half-spacing-unit;
+	padding: $half-spacing-unit $base-spacing-unit 0;
 	text-align: center;
+	@include vp(box-shadow, inset 0 0 0 8px $elephant-tusk);
+	position: relative;
+
+	@include media(min-width $bp-med, 12) {
+		margin-top: $ss-small;
+		min-height: 22rem;
+	}
+
+	&::after {
+		content: '';
+		background: url(../../assets/certify.svg) center center no-repeat;
+		height: 52px;
+		width: 52px;
+		position: absolute;
+		top: 10px;
+		right: 10px;
+	}
 }
 
 .value__offering-copy {
+	font-size: $milli;
+	margin-bottom: $triple-spacing-unit;
 
 }
