--- a/css/style.scss
+++ b/css/style.scss
@@ -15,6 +15,8 @@
 @import 'layouts/layouts-value';
 @import 'layouts/layouts-feature';
 @import 'layouts/layouts-footer';
+@import 'layouts/layouts-banner';
+@import 'layouts/layouts-request';
 @import 'modules/timeline';
 @import 'modules/typography';
 @import 'modules/masthead';
@@ -24,3 +26,5 @@
 @import 'modules/value';
 @import 'modules/feature';
 @import 'modules/footer';
+@import 'modules/banner';
+@import 'modules/request';
