--- a/css/layouts/_layouts-trust.scss
+++ b/css/layouts/_layouts-trust.scss
@@ -27,7 +27,12 @@
 }
 
 .trust__button {
-	@include span-columns(6 of 12);
-	@include shift(3);
+	@include span-columns(12);
 	@include omega();
+
+	@include media(min-width $bp-med, 12) {
+		@include span-columns(5 of 12);
+		@include shift(3.5);
+		@include omega();
+	}
 }
