--- a/css/modules/_interest.scss
+++ b/css/modules/_interest.scss
@@ -3,19 +3,18 @@
 	margin-top: $base-spacing-unit;
 	margin-bottom: $base-spacing-unit;
 
-	@include media(min-width $bp-med, 12) {
-		margin-bottom: 0;
-	}
-
-	&::after {
+	&::before {
 		content: '';
-		left: 0;
 		background: transparent;
-		height: 0px;
+		height: 1px;
 		width: 100%;
 		border-bottom: 2px dotted $elephant-tusk;
 		display: block;
-		margin-top: $triple-spacing-unit;
+		margin: $double-spacing-unit 0 $double-spacing-unit;
+	}
+
+	@include media(min-width $bp-med, 12) {
+		margin-bottom: 0;
 	}
 }
 
@@ -41,12 +40,13 @@
 	display: none;
 }
 
-.interest__form-field-text {
+.interest__form-field-input {
 	@extend %button-padding;
 	@include vp(box-shadow, inset 0 0 0 2px $sea-grey);
 	font-size: $epsilon;
 	padding-left: $half-spacing-unit;
 	border: none;
+	outline: none;
 	font-family: $futura;
 
 	&:active,
@@ -58,12 +58,13 @@
 .interest__form-button {
 	@extend %button;
 	@include vp(box-shadow, inset 0 0 0 2px rgba(0,0,0,0.2));
-	background: $yellow;
+	background: $teal;
+	color: $white;
 	font-weight: $base-weight-heavy;
 	width: 100%;
 
 	&:hover {
 		cursor: pointer;
-		background: darken($yellow, 4%);
+		background: darken($teal, 4%);
 	}
 }
