--- a/css/modules/_request.scss
+++ b/css/modules/_request.scss
@@ -4,6 +4,21 @@
 	margin-bottom: 0;
 }
 
+.request__tagline {
+	font-family: $proxima;
+	font-size: $gamma;
+	font-weight: $base-weight-light;
+	line-height: 1.4;
+	text-align: center;
+	margin-bottom: 0;
+}
+
+.request__tagline-subhead {
+	text-align: center;
+	color: $sea-grey;
+	margin: 0 auto 0;
+}
+
 .request__proof {
 	@extend %side-padding;
 	margin-top: $base-spacing-unit;
@@ -53,15 +68,6 @@
 	color: $sea-grey;
 }
 
-.request__tagline {
-	font-family: $proxima;
-	font-size: $gamma;
-	font-weight: $base-weight-light;
-	line-height: 1.4;
-	text-align: center;
-	margin-bottom: 0;
-}
-
 .request__form {
 	@extend %side-padding;
 	margin-bottom: $ss-big;
@@ -84,12 +90,13 @@
 	letter-spacing: 0;
 	margin-bottom: $quarter-spacing-unit;
 	font-size: $milli;
+	text-transform: uppercase;
 }
 
 .request__form-field-input {
 	@extend %button-padding;
 	@include vp(box-shadow, inset 0 0 0 2px $border-grey);
-	font-size: $epsilon;
+	font-size: $zeta;
 	padding-left: $half-spacing-unit;
 	border: none;
 	font-family: $futura;
