full height image hero

--- a/css/_variables.scss
+++ b/css/_variables.scss
@@ -35,6 +35,7 @@ $half-spacing-unit: $base-spacing-unit / 2;
 $line-height-ratio: $base-line-height / $base-font-size;
 $double-spacing-unit: $base-line-height * 2;
 $triple-spacing-unit: $base-line-height * 3;
+$ss-jumbo: 12.5rem; //Section Spacer Jumbo 200px
 $ss-big: 8.75rem; //Section Spacer Big 140px
 $ss-med: 6.25rem; //Section Spacer Medium 100px
 $ss-small: 5rem; //Section Spacer Small 80px
