--- a/css/style.scss
+++ b/css/style.scss
@@ -16,7 +16,10 @@
 @import 'layouts/layouts-feature';
 @import 'layouts/layouts-footer';
 @import 'layouts/layouts-banner';
+@import 'layouts/layouts-intro';
 @import 'layouts/layouts-request';
+@import 'layouts/layouts-capture';
+@import 'layouts/layouts-text';
 @import 'modules/timeline';
 @import 'modules/typography';
 @import 'modules/masthead';
@@ -27,4 +30,7 @@
 @import 'modules/feature';
 @import 'modules/footer';
 @import 'modules/banner';
+@import 'modules/intro';
 @import 'modules/request';
+@import 'modules/capture';
+@import 'modules/text';
