--- a/css/modules/_typography.scss
+++ b/css/modules/_typography.scss
@@ -7,6 +7,8 @@
 	margin-bottom: $triple-spacing-unit;
 }
 
+/* 
+
 %myriad {font-family: $myriad; }
 %futura { font-family: $futura; }
 %aktiv { font-family: $aktiv; }
@@ -55,6 +57,8 @@
 		font-weight: 300;
 	}
 }
+
+*/
 
 .typography__family {
 	color: $teal;
