--- a/css/style.scss
+++ b/css/style.scss
@@ -4,7 +4,6 @@
 @import	'layout';
 @import 'mixins';
 @import 'base';
-@import 'states';
 @import 'patterns';
 @import 'layouts/layouts-timeline';
 @import 'layouts/layouts-typography';
@@ -20,6 +19,8 @@
 @import 'layouts/layouts-request';
 @import 'layouts/layouts-capture';
 @import 'layouts/layouts-text';
+@import 'layouts/layouts-invite';
+@import 'layouts/layouts-login';
 @import 'modules/timeline';
 @import 'modules/typography';
 @import 'modules/masthead';
@@ -34,3 +35,7 @@
 @import 'modules/request';
 @import 'modules/capture';
 @import 'modules/text';
+@import 'modules/invite';
+@import 'modules/login';
+
+@import 'states';
