--- a/css/_variables.scss
+++ b/css/_variables.scss
@@ -10,6 +10,7 @@ $elephant-tusk: #F7F8FA; //blue-ish grey
 $blue: #5883ED; //facebook-toned blue
 $sea-grey: #93989C; //grey with a hint of seafoam teal
 $border-grey: #E2E3E6; //grey we use for subtle borders
+$red: #F35B5B; //red for tabboo behavior
 
 /**
  * Typography
