update to homepage for jumpoff to project

--- a/css/_base.scss
+++ b/css/_base.scss
@@ -132,9 +132,25 @@ i {
     position: relative;
 }
 
-.signature {
+.status {
     position: absolute;
     top: 50%;
     left: 50%;
     @include vp(transform, translate(-50%,-50%));
+    text-align: center;
 }
+
+.status__update {
+    padding-top: $base-spacing-unit;
+    display: block;
+
+    a {
+        border-bottom: 1px solid $base;
+    }
+
+    a:hover {
+        color: $teal;
+        border-bottom: 1px solid $teal;
+    }
+}
+
