toggle for sign up page and reset password

--- a/css/_patterns.scss
+++ b/css/_patterns.scss
@@ -40,6 +40,13 @@
     font-weight: $base-weight-light;
 }
 
+%form-title {
+    font-size: $gamma;
+    line-height: 1.2;
+    text-align: center;
+    margin-bottom: 0;
+}
+
 %body-text {
     font-family: $proxima;
     letter-spacing: 0;
