--- a/css/style.scss
+++ b/css/style.scss
@@ -21,6 +21,7 @@
 @import 'layouts/layouts-text';
 @import 'layouts/layouts-invite';
 @import 'layouts/layouts-login';
+@import 'layouts/layouts-forgot';
 @import 'modules/timeline';
 @import 'modules/typography';
 @import 'modules/masthead';
@@ -37,5 +38,6 @@
 @import 'modules/text';
 @import 'modules/invite';
 @import 'modules/login';
+@import 'modules/forgot';
 
 @import 'states';
