--- a/css/modules/_forgot.scss
+++ b/css/modules/_forgot.scss
@@ -1,4 +1,8 @@
-.invite {
+.forgotten {
+	//class where .is-masked toggle binds to
+}
+
+.forgot {
 	@extend %side-padding;
 	margin-top: $base-spacing-unit;
 	margin-bottom: 0;
@@ -8,7 +12,7 @@
 	}
 }
 
-.invite__heading {
+.forgot__heading {
 	@extend %form-title;
 
 	&::before {
@@ -16,37 +20,37 @@
 		display: block;
 		text-align: center;
 		margin: $base-spacing-unit auto $half-spacing-unit;
-		background: url('../../assets/accept-icon.svg') center center no-repeat;
-		height: 31px;
+		background: url('../../assets/forgot-password-icon.svg') center center no-repeat;
+		height: 40px;
 		width: 36px;
 	}
 }
 
-.invite__form {
+.forgot__form {
 	@extend %side-padding;
 	margin-bottom: $ss-big;
 }
 
-.invite__form-name {
+.forgot__form-name {
 	padding-right: $quarter-spacing-unit;
 }
 
-.invite__form-auth {
+.forgot__form-auth {
 	padding-left: $quarter-spacing-unit;
 }
 
-.invite__form-accept {
+.forgot__form-accept {
 	margin-top: $double-spacing-unit;
 	border-top: 1px solid $border-grey;
 }
 
-.invite__form-field-label,
-.invite__form-field-input,
-.invite__form-field-checkbox {
+.forgot__form-field-label,
+.forgot__form-field-input,
+.forgot__form-field-checkbox {
 	@extend %hard-reset;
 }
 
-.invite__form-field {
+.forgot__form-field {
 	margin-top: $base-spacing-unit;
 
 	textarea {
@@ -54,14 +58,15 @@
 	}
 }
 
-.invite__form-field-label {
-	letter-spacing: 0;
-	margin-bottom: $quarter-spacing-unit;
+.forgot__form-field-label {
+	@extend %base-weight-light;
+	margin-bottom: $half-spacing-unit;
 	font-size: $milli;
-	text-transform: uppercase;
+	font-family: $proxima;
+	letter-spacing: 0;
 }
 
-.invite__form-field-input {
+.forgot__form-field-input {
 	@extend %button-padding;
 	@include vp(box-shadow, inset 0 0 0 2px $border-grey);
 	font-size: $zeta;
@@ -76,31 +81,36 @@
 	}
 }
 
-.invite__form-field-input[placeholder] {
-		color: $border-grey;
-	}
-
-.invite__form-field-checkbox-text {
+.forgot__form-field-checkbox-text {
 	@extend %form-text;
-	font-weight: $base-weight-light;
-	font-style: italic;
+	margin-bottom: 0;
 
 	@include media(min-width $bp-med, 12) {
 		padding-left: $quarter-spacing-unit;
 	}
-
-	a {
-		color: $blue;
-	}
 }
 
-.invite__form-field-inform-text {
+.forgot__form-field-inform-text {
 	@extend %form-text;
 	padding-top: $quarter-spacing-unit;
 }
 
+.forgot__form-commit-revert {
+	@extend %form-text;
+	padding-top: $base-spacing-unit;
 
-.invite__form-button {
+	a {
+		border-bottom: 1px solid $border-grey;
+
+		&:hover {
+			color: $teal;
+			border-bottom: 1px solid $teal;
+			cursor: pointer;
+		}
+	}
+}
+
+.forgot__form-commit-button {
 	@extend %button;
 	@include vp(box-shadow, inset 0 0 0 2px rgba(0,0,0,0.2));
 	background: $blue;
