--- a/css/modules/_login.scss
+++ b/css/modules/_login.scss
@@ -1,3 +1,7 @@
+.logging-in {
+	//class where .is-masked toggle binds to
+}
+
 .login {
 	@extend %side-padding;
 	margin-top: $base-spacing-unit;
@@ -9,12 +13,7 @@
 }
 
 .login__heading {
-	font-family: $proxima;
-	font-size: $gamma;
-	font-weight: $base-weight-light;
-	line-height: 1.4;
-	text-align: center;
-	margin-bottom: 0;
+	@extend %form-title;
 
 	&::before {
 		content: '';
@@ -105,6 +104,7 @@
 		&:hover {
 			color: $teal;
 			border-bottom: 1px solid $teal;
+			cursor: pointer;
 		}
 	}
 
