--- a/css/modules/_login.scss
+++ b/css/modules/_login.scss
@@ -67,6 +67,7 @@
 
 .login__form-field-input {
 	@extend %button-padding;
+	-webkit-appearance: none;
 	@include vp(box-shadow, inset 0 0 0 2px $border-grey);
 	font-size: $zeta;
 	padding-left: $half-spacing-unit;
