--- a/css/modules/_forgot.scss
+++ b/css/modules/_forgot.scss
@@ -67,20 +67,7 @@
 }
 
 .forgot__form-field-input {
-	@extend %button-padding;
-	-webkit-appearance: none;
-	@include vp(box-shadow, inset 0 0 0 2px $border-grey);
-	font-size: $zeta;
-	padding-left: $half-spacing-unit;
-	border: none;
-	font-family: $futura;
-	outline: 0;
-
-
-	&:active,
-	&:focus {
-		@include vp(box-shadow, inset 0 0 0 2px $blue);
-	}
+	@extend %standard-form-input;
 }
 
 .forgot__form-field-checkbox-text {
