--- a/css/layouts/_layouts-text.scss
+++ b/css/layouts/_layouts-text.scss
@@ -21,3 +21,18 @@
 		@include omega();
 	}
 }
+
+//Jobs Page 
+.jobs {
+	@extend %wrapper;
+}
+
+.jobs__list {
+	@include span-columns(12);
+	@include omega();
+
+	@include media(min-width $bp-med, 12) {
+		@include span-columns(6 of 12);
+		@include omega(2n);
+	}
+}
