--- a/css/_variables.scss
+++ b/css/_variables.scss
@@ -11,6 +11,7 @@ $blue: #5883ED; //facebook-toned blue
 $sea-grey: #93989C; //grey with a hint of seafoam teal
 $border-grey: #E2E3E6; //grey we use for subtle borders
 $red: #F35B5B; //red for tabboo behavior
+$charcoal: #4A4A4A; //charcoal dark grey
 
 /**
  * Typography
