contact request page

--- a/css/_patterns.scss
+++ b/css/_patterns.scss
@@ -39,7 +39,7 @@
     padding-left: $half-spacing-unit;
     border: none;
     outline: none;
-    font-family: $futura;
+    font-family: $proxima;
 
     &:active,
     &:focus {
@@ -55,7 +55,7 @@
     font-size: $zeta;
     padding-left: $half-spacing-unit;
     border: none;
-    font-family: $futura;
+    font-family: $proxima;
     outline: 0;
 
     &:active,
