--- a/css/modules/_capture.scss
+++ b/css/modules/_capture.scss
@@ -6,26 +6,24 @@
 	@include media(min-width $bp-med, 12) {
 		margin-top: $triple-spacing-unit;
 	}
+}
 
-	&::after {
-		content: '';
-		display: block;
-		width: 100%;
-		height:1px;
-		background-image: linear-gradient(to top, transparent 0%,transparent 50%,$border-grey 50%,$border-grey 100%);
-		background-size: 100% 1px;
-		background-position: top;
-		background-repeat: no-repeat;
-	}
+.split {
+	@extend %bottom-page-padding;
 }
 
 .capture__tagline {
-	font-family: $proxima;
-	font-size: $gamma;
-	font-weight: $base-weight-light;
-	line-height: 1.4;
-	text-align: center;
-	margin-bottom: 0;
+	@extend %form-title;
+
+	&::before {
+		content: '';
+		display: block;
+		text-align: center;
+		margin: 0 auto $half-spacing-unit;
+		background: url('../../assets/fan.svg') center center no-repeat;
+		height: 40px;
+		width: 40px;
+	}
 }
 
 .capture__tagline-subhead {
@@ -37,6 +35,12 @@
 .capture__proof {
 	@extend %side-padding;
 	margin-top: $base-spacing-unit;
+	margin-bottom: $base-spacing-unit;
+
+	@include media(min-width $bp-med, 12) {
+		padding-left: $base-spacing-unit;
+		float: right;
+	}
 }
 
 .capture__proof-point {
