--- a/css/_layout.scss
+++ b/css/_layout.scss
@@ -18,6 +18,11 @@
 	max-width: 43.75rem; //700px
 }
 
+.accent {
+	background: white;
+	width:100%;
+}
+
 .accent-section {
 	background: $off-white;
 	background-image: linear-gradient(to top, transparent 0%,transparent 50%,#E2E3E6 50%,#E2E3E6 100%);
