timeline updates/overhaul

--- a/css/_variables.scss
+++ b/css/_variables.scss
@@ -12,6 +12,7 @@ $sea-grey: #93989C; //grey with a hint of seafoam teal
 $border-grey: #E2E3E6; //grey we use for subtle borders
 $red: #F35B5B; //red for tabboo behavior
 $charcoal: #4A4A4A; //charcoal dark grey
+$signature-grey: #D2D2D5;
 
 /**
  * Typography
@@ -22,6 +23,7 @@ $myriad: "myriad-pro", sans-serif;
 $futura: "futura-pt",sans-serif;
 $aktiv: "aktiv-grotesk-std",sans-serif;
 $proxima: "proxima-nova",sans-serif;
+$minimal-serif: 'Georgia', 'Garamond', serif;
 
 $base-weight-light: 400;
 $base-weight-heavy: 700;
